[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/BabyTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/BabyThemeBig.tres" type="Theme" id=2]
[ext_resource path="res://UI/Menu.gd" type="Script" id=3]
[ext_resource path="res://UI/HelpContainer.gd" type="Script" id=4]

[node name="Menu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 256.0
margin_top = 24.0
margin_right = 768.0
margin_bottom = 168.0
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_type_variation = "MainMenu"
bbcode_enabled = true
bbcode_text = "[center][wave amp=45 freq=2][shake rate=5  level=10][color=blue]Baby[/color] [color=red]Kart[/color][/shake][/wave][/center]"
text = "Baby Kart"
scroll_active = false

[node name="Play" type="Button" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 256.0
theme = ExtResource( 1 )
text = "Play!"

[node name="Options" type="Button" parent="."]
margin_left = 384.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 384.0
theme = ExtResource( 1 )
text = "Options"

[node name="Exit" type="Button" parent="."]
margin_left = 384.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 512.0
theme = ExtResource( 1 )
text = "Quit"

[node name="HowToPlay" type="Button" parent="."]
margin_left = 16.0
margin_top = 560.0
margin_right = 103.0
margin_bottom = 584.0
text = "How to Play"

[node name="HelpContainer" type="PanelContainer" parent="."]
visible = false
margin_left = 376.0
margin_top = 184.0
margin_right = 648.0
margin_bottom = 520.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="HelpContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 265.0
margin_bottom = 329.0

[node name="ExitHelp" type="Button" parent="HelpContainer/TextureRect"]
margin_left = 225.0
margin_top = 9.0
margin_right = 249.0
margin_bottom = 33.0
text = "X"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HowToPlay" to="HelpContainer" method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="HelpContainer/TextureRect/ExitHelp" to="HelpContainer" method="_on_ExitHelp_pressed"]
